--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 							<div>
 								<section>
 									<h2 class="white">Thanks for taking the time to look at this!</h2>
-									<p class="white">I'm Andrew DeNike communicating with you via html/css/js (in this specfic portfolio website).  This portfolio contains projects I've built with varying languages/frameworks.</p>
+									<p class="white">I'm Andrew (some call me Andy) DeNike communicating with you via html/css/js in this portfolio website.  This portfolio contains projects I've built with varying languages/frameworks.</p>
 								</section>
 								<!-- <section>
 									<h2>Follow me on ...</h2>
