--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<div class="row">
 								<div class="box">
 									<a href="https://andydenike.github.io/google-homepage/"><img src="./img/google.png"/>
-									<h3 class="centerText">Homepage Recreation</h3></a>
+									<h3 class="centerText">Homepage</h3></a>
 								</div>
 								
 							</div>
@@ -152,7 +152,18 @@
 							<div>
 								<section>
 									<h2 class="white">Thanks for taking the time to look at this!</h2>
-									<p class="white">I'm Andrew (some call me Andy) DeNike communicating with you via html / css / js in this portfolio website.  This portfolio contains projects I've built with varying languages / frameworks.</p>
+									<p class="white">I'm Andrew (some call me Andy) DeNike communicating with you via js / css / html in this portfolio website. Below is a list of the projects on this page with varying frameworks / langugages (and server) used to compose them:</p>
+									<ul>
+										<li><strong>MeFAQs</strong>:  Django / Python / JavaScript / CSS / HTML (Apache)</li>
+										<li><strong>Facecrook</strong>:  Django / Python / JavaScript / CSS / HTML (Heroku)</li>
+										<li><strong>Building & Beyond</strong>:  PHP / JavaScript / CSS / HTML (Apache)</li>
+										<li><strong>Gun Violence In The USA 2013-18</strong>:  Python / Jupyter Notebook (NBViewer)</li>
+										<li><strong>Todos4You</strong>:  Django / Python / JavaScript / CSS / HTML (Heroku)</li>
+										<li><strong>Paper Scissor Rock</strong>:  JavaScript / CSS / HTML (Github)</li>
+										<li><strong>Sketch</strong>:  JavaScript / CSS / HTML (Github)</li>
+										<li><strong>Tribute to Tributes</strong>:  CSS / HTML (Github)</li>
+										<li><strong>Google Homepage</strong>: CSS / HTML (Github) </li>
+									</ul>
 								</section>
 								<!-- <section>
 									<h2>Follow me on ...</h2>
