--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
 							<div>
 								<section>
 									<p>All code from projects on this page can be found at my <a href="https://github.com/AndyDeNike">Github</a></p>
-									<p>Contact me anytime via email:  <a href="mailto:denikeandrew@gmail.com">denikeandrew@gmail.com</a></p>
+									<p>More of my work experience can be found at my <a href="https://www.linkedin.com/in/andrew-denike-4358ba16/">LinkedIn</a></p>
+									<p>For a more detailed resume or anything else, contact me anytime via email:  <a href="mailto:denikeandrew@gmail.com">denikeandrew@gmail.com</a></p>
 								</section>
 							</div>
 						</div>
