--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
 								</div>
 								
 							</div>
+
+							<div class="row">
+								<div class="box">
+									<a href="https://duly-noted-db2f1.web.app/"><img src="./img/noteworld.jpg"/>
+									<h3 class="centerText">Note World</h3></a>
+									<br>
+									<br>
+									<h1>_</h1>
+									<br>
+								</div>
+								
+							</div>
 							<div class="row">
 								<div class="box">
 									<a href="https://facecrook.herokuapp.com/"><img src="./img/fc.jpg"/>
@@ -155,6 +167,7 @@
 									<p class="white">I'm Andrew (some call me Andy) DeNike communicating with you via js / css / html in this portfolio website. Below is a list of the projects on this page with varying frameworks / langugages (and server) used to compose them:</p>
 									<ul>
 										<li><strong>MeFAQs</strong>:  Django / Python / JavaScript / CSS / HTML (Apache)</li>
+										<li><strong>Note World</strong>:  React / JavaScript / CSS / HTML (Firebase)</li>
 										<li><strong>Facecrook</strong>:  Django / Python / JavaScript / CSS / HTML (Heroku)</li>
 										<li><strong>Building & Beyond</strong>:  PHP / JavaScript / CSS / HTML (Apache)</li>
 										<li><strong>Gun Violence In The USA 2013-18</strong>:  Python / Jupyter Notebook (NBViewer)</li>
