--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 							<div>
 								<section>
 									<h2 class="white">Thanks for taking the time to look at this!</h2>
-									<p class="white">I'm Andrew (some call me Andy) DeNike communicating with you via js / css / html in this portfolio website. Below is a list of the projects on this page with varying frameworks / langugages (and server) used to compose them:</p>
+									<p class="white">I'm Andrew (some call me Andy) DeNike communicating with you via js / css / html in this portfolio website. Below is a list of the projects on this page with varying frameworks / languages (and server) used to compose them:</p>
 									<ul>
 										<li><strong>MeFAQs</strong>:  Django / Python / JavaScript / CSS / HTML (Apache)</li>
 										<li><strong>Note World</strong>:  React / JavaScript / CSS / HTML (Firebase)</li>
