--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							</div>
 							<div class="row">
 								<div class="box">
-									<a href="saucesay.netlify.com/"><img src="./img/saysaysay2.png"/>
+									<a href="https://saucesay.netlify.com/"><img src="./img/saysaysay2.png"/>
 									<h3 class="centerText">SauceSay</h3></a>
 									<br>
 									<br>
