Added rankkoala / adjusted woodman

--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
               <br />
               <br />
 
+              <a href="https://andydenike.github.io/rankkoalacomingsoon/"
+                ><img src="./img/rankkoala.png" />
+                <h3>Rankkoala</h3>
+                <h5>(Coming Soon)</h5></a
+              >
+              <br />
+              <br />
+              <h1>_</h1>
+              <br />
+            </div>
+          </div>
+          <div class="row">
+            <div class="box">
               <a href="https://www.mefaqs.com/"
                 ><img src="./img/qa.png" />
                 <h3>MeFAQs</h3></a
@@ -92,9 +105,10 @@
           </div>
           <div class="row">
             <div class="box">
-              <a href="https://www.marshallwoodmansee.com/"
+              <a href="https://andydenike.github.io/woodmanseelegacy/"
                 ><img src="./img/butterfly.png" />
-                <h3 class="centerText">Marhshall Woodmansee</h3></a
+                <h3 class="centerText">Marhshall Woodmansee</h3>
+                <h5>(Legacy)</h5></a
               >
               <br />
               <br />
@@ -219,9 +233,12 @@
               </p>
               <ul>
                 <li>
+                  <a href="https://andydenike.github.io/rankkoalacomingsoon/"><strong>Rankkoala (Coming Soon)</strong></a
+                  >: React / JavaScript / GraphQL / CSS / HTML (MongoDB)
+                </li>
+                <li>
                   <a href="https://www.mefaqs.com/"><strong>MeFAQs</strong></a
-                  >: Django / Python / JavaScript / CSS / HTML /
-                  (PostgreSQL/Apache)
+                  >: Django / Python / JavaScript / CSS / HTML (PostgreSQL/Apache)
                 </li>
                 <li>
                   <a href="https://saucesay.netlify.com/"
@@ -240,7 +257,7 @@
                 </li>
                 <li>
                   <a href="https://www.marshallwoodmansee.com/"
-                    ><strong>Marshall Woodmansee</strong></a
+                    ><strong>Marshall Woodmansee (Legacy)</strong></a
                   >: PHP / JavaScript / CSS / HTML (Apache)
                 </li>
                 <li>
