Update with 3hm and CC

--- a/index.html
+++ b/index.html
@@ -44,6 +44,30 @@
               <br />
               <br />
 
+              <a href="https://carolinescacti.com/"
+                ><img src="./img/cc.png" />
+                <h3>Caroline's Cacti</h3></a
+              >
+              <br />
+              <br />
+              <h1>_</h1>
+              <br />
+            </div>
+          </div>
+          <div class="row">
+            <div class="box">
+
+              <a href="https://3headedmule.com/"
+                ><img src="./img/3hm.png" />
+                <h3>The 3-Headed Mule</h3></a>
+              <br />
+              <br />
+              <h1>_</h1>
+              <br />
+            </div>
+          </div>
+          <div class="row">
+            <div class="box">
               <a href="https://andydenike.github.io/rankkoalacomingsoon/"
                 ><img src="./img/rankkoala.png" />
                 <h3>Rankkoala</h3>
@@ -59,7 +83,8 @@
             <div class="box">
               <a href="https://www.mefaqs.com/"
                 ><img src="./img/qa.png" />
-                <h3>MeFAQs</h3></a
+                <h3>MeFAQs</h3>
+                <h5>(Under Construction)</h5></a</a
               >
               <br />
               <br />
@@ -232,6 +257,14 @@
                 (and server) used to compose them:
               </p>
               <ul>
+                <li>
+                  <a href="https://carolinescacti.com/"><strong>Caroline's Cacti</strong></a
+                  >: CSS / HTML (Github)
+                </li>
+                <li>
+                  <a href="https://3headedmule.com/"><strong>The 3-Headed Mule</strong></a
+                  >: CSS / HTML (Github)
+                </li>
                 <li>
                   <a href="https://andydenike.github.io/rankkoalacomingsoon/"><strong>Rankkoala (Coming Soon)</strong></a
                   >: React / JavaScript / GraphQL / CSS / HTML (MongoDB)
